3-docker-kubernetes/15-k8s-ingress/ingress-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # rule중에 아무것도 속하지 않을경우 보내기
  # default로 보낼 곳 지정
  defaultBackend:
    service:
      name: httpd
      port:
        number: 80
  rules:
  - host: hello.fastcampus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              name: http
  - host: grafana.fastcampus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
