3-docker-kubernetes/15-k8s-ingress/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # nginx className 사용
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # path=/hello의 prefix를 가지면, hello 서비스의 http port로 보내기
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            # grafana/service.yaml에 지정된 포트
            # port.number로 포워딩도 가능
            port:
              name: http
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
